# shai

./: .fetch.config  .ovh.config  README.md
shai-cli/: Cargo.toml
shai-cli/src/: main.rs
shai-core/: Cargo.toml
shai-core/examples/: oauth_test.rs
shai-core/src/agent/: builder.rs
shai-core/src/config/: agent.rs  config.rs
shai-core/src/tools/mcp/: mcp_config.rs  mcp_oauth.rs  mod.rs  tests.rs
shai-http/: Cargo.toml
shai-http/src/: http.rs  lib.rs  streaming.rs
shai-http/src/apis/: mod.rs
shai-http/src/apis/openai/completion/: formatter.rs  handler.rs
shai-http/src/apis/openai/response/: handler.rs
shai-http/src/apis/simple/: handler.rs  mod.rs  types.rs
shai-http/src/session/: manager.rs  session.rs
shai-llm/: Cargo.toml
shai-macros/: Cargo.toml
